--- a/fp2025.cabal
+++ b/fp2025.cabal
@@ -30,6 +30,7 @@ library
       Lessons.Lesson04
       Lessons.Lesson05
       Lessons.Lesson06
+      Lessons.Lesson07
       Lib1
       Lib2
       Lib3
