--- a/fp2025.cabal
+++ b/fp2025.cabal
@@ -31,6 +31,7 @@ library
       Lessons.Lesson05
       Lessons.Lesson06
       Lessons.Lesson07
+      Lessons.Lesson08
       Lib1
       Lib2
       Lib3
